--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color: #f5f5f5">
     <div id="root">
       <div style="width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 16px;">
         <div>Loading...</div>
